# VLA-data-juicer-agents

./: .gitignore  README.md  data_loop_v1.1.html  datapilot_mock.html  pyproject.toml
docs/: navigation-runtime-isolation.md  navigation-server-runbook.md
docs/superpowers/plans/: 2026-06-14-navigation-workflow-agent-implementation-plan.md  (+6 more)
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
frontend/tests/: datapilot.spec.ts
scripts/: run_web.sh
src/vla_data_juicer_agents/: cli.py  session_cli.py
tests/: test_agentscope_bootstrap.py  test_agentscope_event_adapter.py  test_agentscope_runtime_config.py  test_cancellation.py  test_events.py  test_navigation_agent_tools.py  test_navigation_agents.py  test_navigation_catalog.py  test_navigation_cli.py  test_navigation_dataset_catalog.py  test_navigation_execution_tools_dry_run.py  test_navigation_inspection.py  test_navigation_plan_draft_store.py  test_navigation_plan_profile.py  test_navigation_plan_validation.py  test_navigation_processing_scripts.py  test_navigation_profiles.py  test_navigation_run_state.py  test_navigation_runtime.py  test_navigation_session_plan_draft_tools.py  test_navigation_workflow_models.py  test_run_web_script.py  test_session_cli.py  test_session_tool_registry.py  test_tui_app.py  test_tui_controller.py  test_tui_event_adapter.py  test_tui_integration.py  test_web_agentscope_session.py  test_web_api.py  test_web_cli.py  test_web_event_stream.py  test_web_human_decision_api.py  test_web_session_manager.py  test_web_session_store.py
(+119 files in other folders)
